correccion de add_device isBlank